WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243404
warning: inline function ‘static void JSC::JSCell::visitOutputConstraints(JSC::JSCell*, JSC::SlotVisitor&)’ used but never defined
https://bugs.webkit.org/show_bug.cgi?id=243404
Summary
warning: inline function ‘static void JSC::JSCell::visitOutputConstraints(JSC...
Michael Catanzaro
Reported
2022-08-01 08:26:55 PDT
[1492/7693] Building CXX object Source/JavaScriptCore/CMak...s/JavaScriptCore.dir/wasm/js/WebAssemblyFunctionBase.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSCell.h:35, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSArray.h:26, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/bytecode/ArrayAllocationProfile.h:29, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSGlobalObject.h:24, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/bytecode/InternalFunctionAllocationProfile.h:28, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/FunctionRareData.h:28, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSFunction.h:26, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/wasm/js/WebAssemblyFunctionBase.h:30, from /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/wasm/js/WebAssemblyFunctionBase.cpp:27: /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/heap/SlotVisitorMacros.h:96:29: warning: inline function ‘static void JSC::JSCell::visitOutputConstraints(JSC::JSCell*, JSC::SlotVisitor&)’ used but never defined 96 | preModifier static void visitOutputConstraints(JSCell*, SlotVisitor&) | ^~~~~~~~~~~~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSCell.h:174:5: note: in expansion of macro ‘DECLARE_VISIT_OUTPUT_CONSTRAINTS_WITH_MODIFIER’ 174 | DECLARE_VISIT_OUTPUT_CONSTRAINTS_WITH_MODIFIER(inline); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/heap/SlotVisitorMacros.h:95:29: warning: inline function ‘static void JSC::JSCell::visitOutputConstraints(JSC::JSCell*, JSC::AbstractSlotVisitor&)’ used but never defined 95 | preModifier static void visitOutputConstraints(JSCell*, AbstractSlotVisitor&); \ | ^~~~~~~~~~~~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/runtime/JSCell.h:174:5: note: in expansion of macro ‘DECLARE_VISIT_OUTPUT_CONSTRAINTS_WITH_MODIFIER’ 174 | DECLARE_VISIT_OUTPUT_CONSTRAINTS_WITH_MODIFIER(inline); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ I think the problem is WebAssemblyFunctionBase.cpp needs to include JSCellInlines.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-08-01 09:42:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2902
EWS
Comment 2
2022-08-01 11:29:31 PDT
Committed
253001@main
(b5b85e08222f): <
https://commits.webkit.org/253001@main
> Reviewed commits have been landed. Closing PR #2902 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-01 11:30:20 PDT
<
rdar://problem/97925739
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug