warning: inline function ‘static void JSC::JSCell::visitOutputConstraints(JSC::JSCell*, JSC::SlotVisitor&)’ used but never defined https://bugs.webkit.org/show_bug.cgi?id=243404

Reviewed by Justin Michaud.

* Source/JavaScriptCore/wasm/js/WebAssemblyFunctionBase.cpp:

Canonical link: https://commits.webkit.org/253001@main