Source/JavaScriptCore/wasm/js/WebAssemblyFunctionBase.cpp
@@ -30,6 +30,7 @@
 
 #include "HeapCellInlines.h"
 #include "HeapInlines.h"
+#include "JSCellInlines.h"
 #include "JSWebAssemblyInstance.h"
 #include "SlotVisitorInlines.h"
 
